calculatorTest was redone using Clean principles